Fix horizontal scroll bug

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,900&display=swap');
 
+html, body {
+    margin: 0;
+    width: 100%;
+}
+
 body {
     font-family: "Roboto Mono", monospace;
 
